Fixed protocol issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	Drag this to your bookmark bar:
 	<br/>
-	<a href='javascript: void((function(d){if (!document.querySelector("#ccplus-style")) {var s = d.createElement("script");s.id="ccplus-style";s.src = "ganglio.github.com/ccplus/ccplus.js";s.type="text/javascript";d.head.appendChild(s);}})(document));'><span>CCPlus</span></a>
+	<a href='javascript: void((function(d){if (!document.querySelector("#ccplus-style")) {var s = d.createElement("script");s.id="ccplus-style";s.src = "http://ganglio.github.com/ccplus/ccplus.js";s.type="text/javascript";d.head.appendChild(s);}})(document));'><span>CCPlus</span></a>
 	<br/>
 	Go to <a href="http://orteil.dashnet.org/cookieclicker/">http://orteil.dashnet.org/cookieclicker/</a>
 	<br/>
