--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cookie Clicker - Bookmarklet</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	Drag this to your bookmark bar:
-	<br/>
-	<a href='javascript: void((function(d){if (!document.querySelector("#ccplus-style")) {var s = d.createElement("script");s.id="ccplus-style";s.src = "http://ganglio.github.com/ccplus/ccplus.js";s.type="text/javascript";d.head.appendChild(s);}})(document));'><span>CCPlus</span></a>
-	<br/>
-	Go to <a href="http://orteil.dashnet.org/cookieclicker/">http://orteil.dashnet.org/cookieclicker/</a>
-	<br/>
-	Click the CCPlus bookmark and enjoy.
+	<header class='title'>
+		Cookie Clicker Bookmarklet
+	</header>
+	<section class='main'>
+		Drag this to your bookmark bar:
+		<br/>
+		<a class='bookmarklet' href='javascript: void((function(d){if (!document.querySelector("#ccplus-style")) {var s = d.createElement("script");s.id="ccplus-style";s.src = "http://ganglio.github.com/ccplus/ccplus.js";s.type="text/javascript";d.head.appendChild(s);}})(document));'><span>CCPlus</span></a>
+		<br/>
+		Go to <a href="http://orteil.dashnet.org/cookieclicker/">http://orteil.dashnet.org/cookieclicker/</a>
+		<br/>
+		Click the CCPlus bookmark and enjoy.
+	</section>
 </body>
 </html>
